py2/pgms/sec8/Extend/ext/myext/myfuncs.h

// myfuncs.h - call these from Python

int greeting(char *);
double mult(double x, double y);
int replace(char *s, char old, char new);

typedef struct Point {
    double x;
    double y;
} Point;

double slope(Point *p1, Point *p2);
int divide(int x, int y, int *rem);